@@ -6,7 +6,6 @@
     <title>Create classroom</title>
     <link rel="stylesheet" href="post-assignment.css">
 </head>
-
 <body>
     <div id="main-div">
         <h1>Fill the following details and click the 'Post assignment' button</h1>
@@ -59,5 +58,4 @@
         </form>
     </div>
 </body>
-
 </html>
