@@ -15,7 +15,7 @@
             <h3>Title: <%= title[index] %></h3>
             <p>Description: <%= description[index] %></p>
             <h4>Due Date: <%= dueDate[index] %></h4>
-            <a href="">Submit Assignment <%= IDarray[index] %></a>
+            <a href=<%= "/submit-assignment/" + IDarray[index].toString() %> >Submit Assignment <%= IDarray[index] %></a>
         <% } %>
     </body>
 </html>
